2002-11-7 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * python/gdcm.i: added a typemap that converts a C++ hashing table
        to native Python dictionary.
      * python/demo/test.py:
        - now uses the native dictionary for exploration of gdcmHeader.
        - takes an optional filename argument (the file to parse).
      * src/gdcm.h and gdcmHeader.cxx: gdcmHeader now has an accessor on
        PubElVals hashing table. 
      * Dicts/dicomV3.dic removed error prone trailing spaces.

2002-11-6 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * Python wrapping process moved away from src/Makefile to
        newly created python/Makefile (as well as gdcm.i)
      * python/demo/test.py (that mirrors Test/test.cxx) is effective.
      * src/gdcmHeader::FindLength only looks for current vr when necessary.
      * src/gdcmDictSet.cxx: the dictionnaries directory path is now imported
        from the environement variable GDCM_DICT_PATH (when existing).
      * src/gdcmDict::GetTag bug fix.

2002-10-31 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * Straightforward temporary fixes for swig to build the python wrappers.
        src/Makefile now has a python working entry [by working we mean
        that we can import de shadow classes without errors].

2002-10-29 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * hashtest.cxx removed (since allready in Test)
      * src/gdcmlib.h renamed to src/gdcm.h
      * src/dcm.i renamed to src/gdcm.i
      * src/Makefile prepared for python wrapping

2002-10-29 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcmHeader.cxx :
        - Parsing of header is now separated from loading of element values
          (see gdcmHeader::LoadElements).
        - general clean up of hopefully all file access (creation of
          ReadInt16 and ReadInt32)

2002-10-22 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcmHeader.cxx :
        - RecupLgr renamed to FindLength and cut off with new IsAnInteger